<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_item_label"
        android:id="@+id/textViewf"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etEditItemf"
        android:layout_below="@+id/textViewf"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_item_label"
        android:id="@+id/btnSaveEditf"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:text="@string/dgfragcancel"
        android:id="@+id/btnCancelEditf"
        android:layout_alignTop="@+id/btnSaveEditf"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvduedatefrag"
        android:id="@+id/tvDueDateFrag"
        android:layout_below="@+id/etEditItemf"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:layout_alignEnd="@+id/textViewf"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDueDateFrag"
        android:layout_marginTop="36dp"
        android:onClick="showDatePickerDialog"
        android:layout_below="@+id/tvDueDateFrag"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etEditItemf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvpriorityfrag"
        android:id="@+id/tvPriorityFrag"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinPriorityFrag"
        android:layout_below="@+id/tvPriorityFrag"
        android:layout_marginTop="36dp"
        android:layout_alignEnd="@+id/etDueDateFrag"
        android:spinnerMode="dropdown" />

</RelativeLayout>